src/test/ui/generic-associated-types/projection-bound-cycle-generic.stderr
error[E0275]: overflow evaluating the requirement `<T as Foo>::Item: Sized`
  --> $DIR/projection-bound-cycle-generic.rs:44:18
   |
LL |     type Item: Sized where <Self as Foo>::Item: Sized;
   |                                                 ----- required by this bound in `Foo::Item`
...
LL |     type Assoc = OnlySized<<T as Foo>::Item>;
   |                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0275`.
